--- a/ecotech2/src/main/resources/templates/donoEcoponto/login.html
+++ b/ecotech2/src/main/resources/templates/donoEcoponto/login.html
@@ -21,11 +21,11 @@
         <br><br>
     </header>
 
-    <main th:each="c : ${problem}">
+    <main th:each="c : ${problem}" >
         <br><br><br><br><br><br>
         <div class="login-box">
             <h2 class="login-title">Insira seu E-mail para se cadastrar ou entrar</h2><br>
-            <form th:action="@{/ecotech/ecoponto/login}" th:object="${local}" method="post" class="loginForm">
+            <form th:action="@{/ecotech/ecoponto/login}" th:object="${local}" method="post" class="loginForm" >
                 <h4>Insira seu E-mail</h4>
                 <input type="email" name="email" id="email" placeholder="E-mail" required th:field="*{email}">
                 <br><h4>Insira sua senha</h4>
@@ -38,7 +38,7 @@
                     
                 </div>
 
-                <br><br> <span th:if="${c}==true" > <span style="color:red;" >Login ou senha errados</span> <br><br>
+                <br><br> <span th:if="${c}==true" > <span style="color:red;" >Login ou senha errados</span></span><br><br>
 
                 <input type="submit" value="continuar" class="login_button">
             </form><br><br><br>
