--- a/ecotech2/src/main/resources/templates/intranet/locais.html
+++ b/ecotech2/src/main/resources/templates/intranet/locais.html
@@ -69,15 +69,15 @@
                             </td>
                         </span>
                          <span th:if="${local.statusPonto} == false" >
-                            <td th:text="${local.id}" style="background-color: red;"></td>
-                            <td th:text="${local.nome}"></td>
-                            <td th:text="${local.logradouro}"></td>
-                            <td th:text="${local.email}"></td>
-                            <td th:text="${local.cnpj}"></td>
+                            <td th:text="${local.id}" class="disabled"></td>
+                            <td th:text="${local.nome}" class="disabled"></td>
+                            <td th:text="${local.logradouro}" class="disabled"></td>
+                            <td th:text="${local.email}" class="disabled"></td>
+                            <td th:text="${local.cnpj}"class="disabled"></td>
                
-                            <td th:text="${local.statusPonto ? 'Ativo' : 'Inativo'}"></td>
-                            <td>
-                                <a th:href="@{/ecotech/locais/editar-local/{id}(id=${local.id})}" class="btn btn-primary" style="background-color: #82AE64; border:#82AE64">
+                            <td th:text="${local.statusPonto ? 'Ativo' : 'Inativo'}" class="disabled"></td>
+                            <td class="disabled">
+                                <a th:href="@{/ecotech/locais/editar-local/{id}(id=${local.id})}" class="btn btn-primary" style="background-color: rgb(192, 192, 192); border:rgb(192, 192, 192)">
                                     <i class="fas fa-edit ml-2"></i>
                                 </a>
                             </td>
