--- a/ecotech2/src/main/resources/templates/intranet/novo-local.html
+++ b/ecotech2/src/main/resources/templates/intranet/novo-local.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-	  <header class="black" style="padding-bottom: 3%; padding-top:4%">
+	  <header class="black" style="padding-bottom: 3%; padding-top:4%" >
         <!-- Logo -->
         <img src="/img/logo.png" alt="Logo" class="logo">
         <!-- Menu -->
@@ -37,7 +37,7 @@
 
 	<main>
 		<br><br>
-		<form action="#" th:action="@{/ecotech/locais/add-local}" style="padding: 30%; padding-top:0%; padding-right: 30%; padding-bottom:0%" th:object="${local}" method="post">
+		<form action="#" th:action="@{/ecotech/locais/add-local} style="padding: 30%; padding-top:0%; padding-right: 30%; padding-bottom:0%" th:object="${local}" method="post">
 		
 			<div class="row">
 				<div class="form-group col-md-12">
