--- a/ecotech2/src/main/resources/templates/index.html
+++ b/ecotech2/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="/style2.css">
+  <link rel="stylesheet" type="text/css" href="/style.css">
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
  
@@ -27,58 +27,7 @@
   </header>
   
   
-  <div class="div-container">
-  
-    <div class="text-container"><br>
-      <p class="titulo"> Bem-vindo ao EcoTech: </p>
-      <p class="subtitulo"> Seu guia inteligente para um estilo <br> de vida sustentável </p>
-      <p class="texto1"> Mais que um aplicativo, uma comunidade comprometida <br> com a sustentabilidade. 
-      <br> Facilitamos a busca por pontos de coleta, promovendo <br> práticas ecológicas, incentivando mudanças positivas. </p>
-    </div>
-    <img src="/img/logoeco.png" alt="Logo Eco" class="logo-eco">
-  </div>
-  <br><br><br><br><br><br><br><br><br>
-  <div class="slide-navigation">
-  <div class="prev" onclick="plusSlides(-1)">&#10094;</div>
-  <div class="next" onclick="plusSlides(+1)">&#10095;</div>
- <br><br><br>
-</div>
-  <div class="slideshow-container">
-    <div class="mySlides fade">
-      <img src="/img/imagem1.png" alt="Imagem 1">
-      <div class="slide-text" style="font-size: 150%;">Localização simples e rápida </div>
-      <div class="slide-text2" style="top:-15%">Encontre pontos de coleta próximos em questão de segundos</div>
-    </div>
-  
-    <div class="mySlides fade">
-      <img src="/img/imagem2.png" alt="Imagem 2">
-      <div class="slide-text" style="font-size: 150%;">Detalhes abrangentes </div>
-      <div class="slide-text2" style="top:-15%"> Informações detalhadas sobre cada ponto de coleta </div>
-    </div>
-  
-    <div class="mySlides fade">
-      <img src="/img/imagem3.png" alt="Imagem 3">
-      <div class="slide-text" style="font-size: 150%;">Descubra o caminho certo </div>
-      <div class="slide-text2" style="top:-15%">Identifique o grupo de reciclagem para seus resíduos </div>
-    </div>
-  </div>
-
-  <br><br><br><br><br><br><br><br><br><br>
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span>
-  <span class="dot" onclick="currentSlide(2)"></span>
-  <span class="dot" onclick="currentSlide(3)"></span>
-</div>
-<div class="slide-navigation">
-    </div>
-  
-  <div class="titulo2"><br><br><br><br><br>
-    <h2>Faça Parte da Mudança - Baixe Agora</h2>
-    <h5 style="color:#303030";>Transforme suas escolhas diárias em ações positivas para o planeta. 
-      Junte-se à comunidade EcoTech - Baixe agora e embarque nesta jornada rumo a um futuro mais sustentável! 🌳🌏</h5>
-    </div>
-  
-    <img src="/img/celular1.png" class="imagem2 celular-image">
+  <br>
 
   <footer>
     <div class="footer-content">
