--- a/ecotech2/src/main/resources/templates/intranet/locais.html
+++ b/ecotech2/src/main/resources/templates/intranet/locais.html
@@ -36,7 +36,8 @@
         <!--
           <a th:href="@{/ecotech/locais/novo-local}" class="btn btn-primary m-2" style="background-color: #82AE64;border:#82AE64">
              	<i class="fas fa-cart-plus ml-2"></i>
-             	Novo EcoPontos
+             	Novo EcoPontos56
+             	
             </a>-->
         
             <div>
