--- a/ecotech2/src/main/resources/static/style.css
+++ b/ecotech2/src/main/resources/static/style.css
@@ -3,13 +3,13 @@
       padding: 0;
       background-color: #ffffff;
       overflow-x: hidden;
+      font-family: 'Montserrat', sans-serif;
     }
 
  
-
     .titulo {
       color: #82ae64;
-      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;;
+     font-family: 'Newsanse Heavy';
       font-size: 45px;
       margin-bottom: 30px;
       margin-left: 10%;
@@ -17,7 +17,7 @@
 
     .subtitulo {
       color: #000000;
-      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+      font-family: 'Newsanse Heavy';
       font-size: 30px;
       margin-left: 10%;
 
@@ -25,7 +25,7 @@
 
     .texto1 {
       color: #000000;
-      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+      font-family: 'Newsanse Heavy';
       font-size: 18px;
       margin-left: 10%;
       
@@ -40,6 +40,47 @@
       margin-top: 40px;
     }
 
+	#banner {
+           
+            width: 100%;
+         	text-align: center;
+          	height:1000px;
+
+            margin: 0 auto;
+        }
+
+        #banner img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: auto;
+            z-index: -1; /* Coloca a imagem atrás do texto */
+        }
+        
+        #bannerTexts{
+			 padding: 10%;
+		}
+
+        #banner h1,
+        #banner h3 {
+            position: relative;
+            color: white; /* Ajuste a cor do texto conforme necessário */
+            text-align: center; /* Alinha o texto no centro */
+            margin: 0;
+            padding: 10px;
+            font-size: 1.25em;
+         
+        }
+
+        	#banner h1 {
+   			 font-size: 4em;
+    		font-weight: 1000; /* Define o peso da fonte como negrito */
+		}
+
+        #banner h3 {
+            font-size: 1.5em;
+        }
 
   footer {
     background-color: #000;
@@ -170,7 +211,7 @@
       color: #ffffff;
       text-decoration: none;
       margin: 0 15px;
-      font-family: Arial, Helvetica, sans-serif;
+      font-family: 'Newsanse Heavy';
       transition: color 0.3s, text-decoration 0.3s;
       text-align: right;
     }
@@ -190,7 +231,7 @@
       color: #ffffff;
       text-decoration: none;
       margin: 0 15px;
-      font-family: Arial, Helvetica, sans-serif;
+      font-family: 'Newsanse Heavy';
       transition: color 0.3s, text-decoration 0.3s;
       text-align: right;
     }
