--- a/ecotech2/src/main/resources/templates/donoEcoponto/editar.html
+++ b/ecotech2/src/main/resources/templates/donoEcoponto/editar.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="/style.css">
 	<script src="https://kit.fontawesome.com/a11b8c2525.js" crossorigin="anonymous"></script>
 	<script src="/javascript.js"></script>
-    <link rel="shortcut icon" href="/img/logoeco.png">
+	<link rel="shortcut icon" href="/img/logoeco.png">
 
 	<title>Editar</title>
 
@@ -20,20 +20,56 @@
 </head>
 
 <body>
-  <header class="black" style="padding-bottom: 3%; padding-top:4%">
-        <!-- Logo -->
-        <img src="/img/logo.png" alt="Logo" class="logo">
-        <!-- Menu -->
-        <nav class="nav">
-            <a href="/ecotech/cliente/index" >Home</a>
-            <a href="/ecotech/ecoponto/perfil" >Tela Perfil</a>
-           
-        </nav>
-       <br><br> <br>
+	<header class="black" style="padding-bottom: 3%; padding-top:4%">
+		<!-- Logo -->
+		<img src="/img/logo.png" alt="Logo" class="logo">
+		<!-- Menu -->
+		<nav class="nav">
+			<a href="/ecotech/cliente/index">Home</a>
+			<a href="/ecotech/ecoponto/perfil">Tela Perfil</a>
 
+		</nav>
+		<br><br> <br>
 
-       
-    </header>
+		<script type="text/javascript">
+			document.addEventListener("DOMContentLoaded", function () {
+				const profilePicture = document.getElementById("profilePicture");
+				const fotoExistente = "[[${foto != null} ? 'data:image/jpeg;base64,' + ${foto} : '']]";
+
+				// Define a imagem ao carregar a página
+				if (fotoExistente !== '') {
+					profilePicture.src = fotoExistente;
+				} else {
+					profilePicture.src = "/img/logoeco.png";
+				}
+			});
+
+			function preViewImg() {
+				const uploadInput = document.getElementById("uploadImage");
+				const profilePicture = document.getElementById("profilePicture");
+
+				if (uploadInput.files && uploadInput.files[0]) {
+					const reader = new FileReader();
+
+					reader.onload = function (e) {
+						profilePicture.src = e.target.result; // Define a imagem como a do upload
+					};
+
+					reader.readAsDataURL(uploadInput.files[0]);
+				} else {
+					const fotoExistente = profilePicture.getAttribute("data-foto-existente");
+
+					if (fotoExistente) {
+						profilePicture.src = fotoExistente; // Define a imagem existente do banco de dados
+					} else {
+						profilePicture.src = "/img/logoeco.png"; // Define a imagem padrão
+					}
+				}
+			}
+
+		</script>
+
+	</header>
 
 
 	<main>
@@ -42,164 +78,200 @@
 
 
 
-<div style="padding-left: 10%;">
-		<form action="#" th:action="@{/ecotech/ecoponto/update} " style="margin:5%; padding-right: 10% " enctype="multipart/form-data"
-			th:object="${local}" method="post">
-			<div class="row">
+		<div class="regis_box" style="padding: 3%; margin-bottom: 5%; width: 80%; text-align: left; color: grey;">
+			<form action="#" th:action="@{/ecotech/ecoponto/update} " enctype="multipart/form-data" th:object="${local}"
+				method="post">
+				<h1 style="text-align: center; color: black;">Informações do seu Ecoponto</h1><br>
 
-				<div class="form-group col-md-1">
-					<label for="id" class="col-form-label">ID:</label>
-					<input type="text" th:field="*{id}" class="form-control" id="id" placeholder="ID" readonly>
-					<span th:if="${#fields.hasErrors('id')}" th:errors="*{id}" class="text-danger"></span>
+
+				<div class="form-group col-md-11" style="text-align: center;">
+					<label for="uploadImage" id="profilePictureFade">
+						
+						<img id="profilePicture" src="" alt="Imagem de perfil"><br><br><br>
+						<h3>Chose a image</h3>
+						<input style="display: none;" class="form-control" type="file" id="uploadImage" onchange="preViewImg();" name="file"
+							accept="image/*" />
+				</div></label>
+
+
+
+
+
+				<div class="row">
+					<div class="form-group col-md-1">
+						<label for="id" class="col-form-label">ID:</label>
+						<input type="text" th:field="*{id}" class="form-control" id="id" placeholder="ID" readonly>
+
+					</div>
+
+					<div class="form-group col-md-5">
+						<label for="nome" class="col-form-label">Nome:</label>
+						<input type="text" th:field="*{nome}" class="form-control" id="nome" placeholder="Nome">
+
+					</div>
+					<div class="form-group col-md-5">
+						<label for="cnpj" class="col-form-label">cnpj:</label>
+						<input type="text" th:field="*{cnpj}" class="form-control" id="cnpj" placeholder="cnpj">
+
+					</div>
+					<div class="row">
+					</div>
+					<div class="form-group col-md-6">
+						<label for="email" class="col-form-label">email:</label>
+						<input type="email" th:field="*{email}" class="form-control" id="email" placeholder="email">
+
+					</div>
+					<div class="form-group col-md-5">
+						<label for="senha" class="col-form-label">senha:</label>
+						<input type="text" th:field="*{senha}" class="form-control" id="senha" placeholder="senha">
+
+					</div>
 				</div>
+				<br>
+				<div class="row">
+					<div class="form-group col-md-11">
+						<label for="website" class="col-form-label">Website:</label>
+						<input type="text" th:field="*{website}" class="form-control" id="website"
+							placeholder="Website">
 
-				<div class="form-group col-md-2">
-					<label for="nome" class="col-form-label">Nome:</label>
-					<input type="text" th:field="*{nome}" class="form-control" id="nome" placeholder="Nome">
-					<span th:if="${#fields.hasErrors('nome')}" th:errors="*{nome}" class="text-danger"></span>
+					</div>
+				</div><br>
+				<div class="row">
+					<div class="form-group col-md-2">
+						<label for="cidade" class="col-form-label">Cidade:</label>
+
+						<input type="text" list="cidades" th:field="*{cidade}" class="form-control" id="cidade"
+							placeholder="Cidade">
+						<datalist id="cidades">
+							<option th:each="cidade : ${cidades}" th:value="${cidade}"></option>
+						</datalist>
+					</div>
+
+					<div class="form-group col-md-2">
+						<label for="logradouro" class="col-form-label">Logradouro:</label>
+						<input type="text" th:field="*{logradouro}" class="form-control" id="logradouro"
+							placeholder="Logradouro">
+
+					</div>
+
+					<div class="form-group col-md-2">
+						<label for="cep" class="col-form-label">CEP:</label>
+						<input type="text" th:field="*{cep}" class="form-control" id="cep" placeholder="CEP">
+
+					</div>
+
+					<div class="form-group col-md-2">
+						<label for="numResid" class="col-form-label">Número:</label>
+						<input type="text" th:field="*{numResid}" class="form-control" id="numResid"
+							placeholder="Número">
+
+					</div>
+
+					<div class="form-group col-md-2">
+						<label for="bairro" class="col-form-label">Bairro:</label>
+						<input type="text" th:field="*{bairro}" class="form-control" id="bairro" placeholder="Bairro">
+
+					</div>
+
+
+
+					<div class="form-group col-md-1">
+						<label for="uf" class="col-form-label">UF:</label>
+						<input type="text" th:field="*{uf}" class="form-control" id="uf" placeholder="UF">
+
+					</div>
+
+					<div class="form-group col-md-2">
+						<label for="complemento" class="col-form-label">Complemento:</label>
+						<input type="text" th:field="*{complemento}" class="form-control" id="complemento"
+							placeholder="Complemento">
+
+					</div>
+
+					<div class="form-group col-md-5">
+						<label for="pontoRef" class="col-form-label">Ponto de Referência:</label>
+						<input type="text" th:field="*{pontoRef}" class="form-control" id="pontoRef"
+							placeholder="Ponto de Referência">
+
+					</div>
 				</div>
-				<div class="form-group col-md-2">
-					<label for="cnpj" class="col-form-label">cnpj:</label>
-					<input type="text" th:field="*{cnpj}" class="form-control" id="cnpj" placeholder="cnpj">
-					<span th:if="${#fields.hasErrors('cnpj')}" th:errors="*{cnpj}" class="text-danger"></span>
+				<br>
+				<div class="row">
+					<div class="form-group col-md-3">
+						<label for="telefone" class="col-form-label">Telefone:</label>
+						<input type="text" th:field="*{telefone}" class="form-control" id="telefone"
+							placeholder="Telefone">
+
+					</div>
+
+					<div class="form-group col-md-4">
+						<label for="horarioFunc" class="col-form-label">Horário de Funcionamento:</label>
+						<input type="text" th:field="*{horarioFunc}" class="form-control" id="horarioFunc"
+							placeholder="Horário de Funcionamento">
+
+					</div>
+					<div class="form-group col-md-4">
+						<label for="grupo_residuos" class="col-form-label">Grupo de Resíduo</label>
+						<select th:field="*{grupoResiduos.id}" class="form-control" id="grupo_residuos">
+							<option th:each="grupo : ${grupoResiduosList}" th:value="${grupo.id}"
+								th:text="${grupo.nome}"></option>
+						</select>
+					</div>
+
+					<div class="form-group col-md-11">
+						<label for="descricao" class="col-form-label">Descrição:</label>
+						<textarea th:field="*{descricao}" class="form-control" id="descricao" rows="3"
+							placeholder="Descrição"></textarea>
+
+					</div>
+
 				</div>
-				<div class="form-group col-md-2">
-					<label for="email" class="col-form-label">email:</label>
-					<input type="text" th:field="*{email}" class="form-control" id="email" placeholder="email">
-					<span th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-danger"></span>
-				</div>
-				<div class="form-group col-md-2">
-					<label for="senha" class="col-form-label">senha:</label>
-					<input type="text" th:field="*{senha}" class="form-control" id="senha" placeholder="senha">
-					<span th:if="${#fields.hasErrors('senha')}" th:errors="*{senha}" class="text-danger"></span>
-				</div>
-				
-
-				<div class="form-group col-md-4">
-					<label for="descricao" class="col-form-label">Descrição:</label>
-					<input type="text" th:field="*{descricao}" class="form-control" id="descricao"
-						placeholder="Descrição">
-					<span th:if="${#fields.hasErrors('descricao')}" th:errors="*{descricao}" class="text-danger"></span>
-				</div>
-
-				<div class="form-group col-md-2">
-					<label for="website" class="col-form-label">Website:</label>
-					<input type="text" th:field="*{website}" class="form-control" id="website" placeholder="Website">
-					<span th:if="${#fields.hasErrors('website')}" th:errors="*{website}" class="text-danger"></span>
-				</div>
-
-				<div class="form-group col-md-2">
-					<label for="logradouro" class="col-form-label">Logradouro:</label>
-					<input type="text" th:field="*{logradouro}" class="form-control" id="logradouro"
-						placeholder="Logradouro">
-					<span th:if="${#fields.hasErrors('logradouro')}" th:errors="*{logradouro}"
-						class="text-danger"></span>
-				</div>
-
-				<div class="form-group col-md-2">
-					<label for="cep" class="col-form-label">CEP:</label>
-					<input type="text" th:field="*{cep}" class="form-control" id="cep" placeholder="CEP">
-					<span th:if="${#fields.hasErrors('cep')}" th:errors="*{cep}" class="text-danger"></span>
-				</div>
-
-				<div class="form-group col-md-2">
-					<label for="numResid" class="col-form-label">Número:</label>
-					<input type="text" th:field="*{numResid}" class="form-control" id="numResid" placeholder="Número">
-					<span th:if="${#fields.hasErrors('numResid')}" th:errors="*{numResid}" class="text-danger"></span>
-				</div>
-
-				<div class="form-group col-md-2">
-					<label for="bairro" class="col-form-label">Bairro:</label>
-					<input type="text" th:field="*{bairro}" class="form-control" id="bairro" placeholder="Bairro">
-					<span th:if="${#fields.hasErrors('bairro')}" th:errors="*{bairro}" class="text-danger"></span>
-				</div>
-
-				<div class="form-group col-md-2">
-					<label for="cidade" class="col-form-label">Cidade:</label>
-					<input type="text" th:field="*{cidade}" class="form-control" id="cidade" placeholder="Cidade">
-					<span th:if="${#fields.hasErrors('cidade')}" th:errors="*{cidade}" class="text-danger"></span>
-				</div>
-
-				<div class="form-group col-md-1">
-					<label for="uf" class="col-form-label">UF:</label>
-					<input type="text" th:field="*{uf}" class="form-control" id="uf" placeholder="UF">
-					<span th:if="${#fields.hasErrors('uf')}" th:errors="*{uf}" class="text-danger"></span>
-				</div>
-
-				<div class="form-group col-md-2">
-					<label for="complemento" class="col-form-label">Complemento:</label>
-					<input type="text" th:field="*{complemento}" class="form-control" id="complemento"
-						placeholder="Complemento">
-					<span th:if="${#fields.hasErrors('complemento')}" th:errors="*{complemento}"
-						class="text-danger"></span>
-				</div>
-
-				<div class="form-group col-md-2">
-					<label for="pontoRef" class="col-form-label">Ponto de Referência:</label>
-					<input type="text" th:field="*{pontoRef}" class="form-control" id="pontoRef"
-						placeholder="Ponto de Referência">
-					<span th:if="${#fields.hasErrors('pontoRef')}" th:errors="*{pontoRef}" class="text-danger"></span>
-				</div>
-
-				<div class="form-group col-md-2">
-					<label for="telefone" class="col-form-label">Telefone:</label>
-					<input type="text" th:field="*{telefone}" class="form-control" id="telefone" placeholder="Telefone">
-					<span th:if="${#fields.hasErrors('telefone')}" th:errors="*{telefone}" class="text-danger"></span>
-				</div>
-
-				<div class="form-group col-md-4">
-					<label for="horarioFunc" class="col-form-label">Horário de Funcionamento:</label>
-					<input type="text" th:field="*{horarioFunc}" class="form-control" id="horarioFunc"
-						placeholder="Horário de Funcionamento">
-					<span th:if="${#fields.hasErrors('horarioFunc')}" th:errors="*{horarioFunc}"
-						class="text-danger"></span>
-				</div>
-
-
-
-
 
 				<div class="form-group col-md-12">
-				 <a href="/ecotech/ecoponto/perfil"class="btn btn-primary mb-2"  style="background-color: rgb(192, 192, 192); border:rgb(192, 192, 192)">Voltar</a>
-					<input type="submit" class="btn btn-primary mb-2" value="Atualizar Local" style="background-color: #82AE64; border:#82AE64">
-					
-				</div>
-		
+					<a href="/ecotech/ecoponto/perfil" class="btn btn-primary mb-2"
+						style="background-color: rgb(192, 192, 192); border:rgb(192, 192, 192)">Voltar</a>
+					<input type="submit" class="btn btn-primary mb-2" value="Atualizar Local"
+						style="background-color: #82AE64; border:#82AE64">
 
-			</div>
-		</form>
-</div>
+				</div>
+
+
+
+			</form>
+		</div>
 	</main>
 	<footer>
-        <div class="footer-content">
-            <div class="footer-section">
-                <h3>Suporte</h3>
-                <ul>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Fale Conosco</a></li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h3>Redes Sociais</h3>
-                <ul class="social-icons">
-                    <li><a href="#"><i class="fa fa-whatsapp" style="font-size:24px"></i></a></li>
-                    <li><a href="#"><i class="fa fa-instagram" style="font-size:24px"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter" style="font-size:24px"></i></a></li>
-                </ul>
-            </div>
+		<div class="footer-content">
+			<div class="footer-section">
+				<h3>Suporte</h3>
+				<ul>
+					<li><a href="#">FAQ</a></li>
+					<li><a href="#">Fale Conosco</a></li>
+				</ul>
+			</div>
+			<div class="footer-section">
+				<h3>Redes Sociais</h3>
+				<ul class="social-icons">
+					<li><a href="#"><i class="fa fa-whatsapp" style="font-size:24px"></i></a></li>
+					<li><a href="#"><i class="fa fa-instagram" style="font-size:24px"></i></a></li>
+					<li><a href="#"><i class="fa fa-twitter" style="font-size:24px"></i></a></li>
+				</ul>
+			</div>
 
-        </div>
-        <hr>
-        <div class="footer-bottom">
-            <div class="footer-left">
-                <p style="font-size: larger;">Brasil</p>
-            </div>
-            <div class="footer-links">
-                <a href="#">Política de Privacidade</a>
-                <a href="#">Termos de Uso</a>
-            </div>
-        </div>
-    </footer>
+		</div>
+		<hr>
+		<div class="footer-bottom">
+			<div class="footer-left">
+				<p style="font-size: larger;">Brasil</p>
+			</div>
+			<div class="footer-links">
+				<a href="#">Política de Privacidade</a>
+				<a href="#">Termos de Uso</a>
+			</div>
+		</div>
+	</footer>
+
+
 </body>
 
 </html>
