--- a/ecotech2/src/main/resources/templates/index.html
+++ b/ecotech2/src/main/resources/templates/index.html
@@ -10,16 +10,11 @@
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
-
- 
 </head>
 <body>
-  <!-- Cabeçalho -->
- 
+
   <header class="black">
-    <!-- Logo -->
     <img src="/img/logo.png" alt="Logo" class="logo">
-    <!-- Menu -->
     <nav>
       <a href="recursos.html">Recursos</a>
       <a href="privacidade.html">Privacidade</a>
@@ -27,44 +22,41 @@
       <a href="baixar.html">Baixar</a>
     </nav>
   </header>
-  
+
   <main>
-  	
- 
-
-  <div id="banner">
-    <img src="/img/bannertemporario.png" alt="">
-    <div id="bannerTexts">
-    <h3>Encontre um ecoponto perto de você</h3>
-    <h1>Recicle seu lixo eletrônico com quem entende.</h1>
-    </div>
-  </div>
-
-  <div class="beneficios">
-    <h1>Benefícios de reciclcar seu lixo eletrônico</h1>
-    <div id="beneficio-conteiner">
-      <div class="blocos">
-        <i>icone aqui</i>
-        <h4>Titulo</h4>
-        <p>legenda</p>
-      </div>
-       <div class="blocos">
-        <i>icone aqui</i>
-        <h4>Titulo</h4>
-        <p>legenda</p>
-      </div>
-       <div class="blocos">
-        <i>icone aqui</i>
-        <h4>Titulo</h4>
-        <p>legenda</p>
-      </div>
-       <div class="blocos">
-        <i>icone aqui</i>
-        <h4>Titulo</h4>
-        <p>legenda</p>
+    <div id="banner">
+      <img src="/img/bannertemporario.png" alt="">
+      <div id="bannerTexts">
+        <h3>Encontre um ecoponto perto de você</h3>
+        <h1>Recicle seu lixo eletrônico com quem entende.</h1>
       </div>
     </div>
 
+    <div class="beneficios">
+      <h1>Benefícios de reciclar seu lixo eletrônico</h1>
+      <div id="beneficio-conteiner">
+        <div class="blocos">
+          <i>icone aqui</i>
+          <h4>Titulo</h4>
+          <p>legenda</p>
+        </div>
+        <div class="blocos">
+          <i>icone aqui</i>
+          <h4>Titulo</h4>
+          <p>legenda</p>
+        </div>
+        <div class="blocos">
+          <i>icone aqui</i>
+          <h4>Titulo</h4>
+          <p>legenda</p>
+        </div>
+        <div class="blocos">
+          <i>icone aqui</i>
+          <h4>Titulo</h4>
+          <p>legenda</p>
+        </div>
+      </div>
+    </div>
 
     <div id="nosso-app">
       <div>
@@ -76,80 +68,99 @@
         </div>
       </div>
       <div>
-        <div class="infs">
-          <div class="nsAp-infs-img"></div>
-          <h2>informação</h2>
-          <h3>sub inf</h3>
-        </div>
-        <div class="infs">
-          <div class="nsAp-infs-img"></div>
-          <h2>informação</h2>
-          <h3>sub inf</h3>
-        </div>
-        <div class="infs">
-          <div class="nsAp-infs-img"></div>
-          <h2>informação</h2>
-          <h3>sub inf</h3>
-        </div>
-        <div class="infs">
-          <div class="nsAp-infs-img"></div>
-          <h2>informação</h2>
-          <h3>sub inf</h3>
-        </div>
+
+        <div class="historia">
+          <div class="historia-conteudo">
+              <div class="imagens">
+                  <img src="caminho/para/imagem1.jpg" alt="Imagem 1">
+                  <img src="caminho/para/imagem2.jpg" alt="Imagem 2">
+                  <img src="caminho/para/imagem3.jpg" alt="Imagem 3">
+              </div>
+              <div class="texto">
+                  <h1>Nossa História</h1>
+                  <p>
+                      Há alguns anos, em meio ao avanço industrial, nasceu a CO2 Ambiental, dedicada à logística reversa de resíduos eletrônicos. Com uma ideologia focada na preservação ambiental, cada ação da empresa contribui para um futuro mais sustentável. Com uma equipe comprometida, a CO2 Ambiental não só alcançou sucesso, mas também liderou a mudança na sustentabilidade empresarial. A cada dispositivo reciclado, a empresa reduz o carbono e avança em direção a um mundo mais limpo e habitável, promovendo um futuro onde a natureza e a tecnologia prosperam juntas.
+                  </p><br>
+              </div>
+          </div>
+
+          <div class="blocos-segundo-grupo">
+              <div class="blocos">
+                  <i class="icone">Icone 1</i>
+                  <h4>+ 5 anos</h4>
+                  <p>Com reciclagem eletrônica</p>
+              </div>
+              <div class="blocos">
+                  <i class="icone">Icone 2</i>
+                  <h4>+ 1.000</h4>
+                  <p>Clientes Ativos</p>
+              </div>
+              <div class="blocos">
+                  <i class="icone">Icone 3</i>
+                  <h4>100%</h4>
+                  <p>Atendimentos território nacional</p>
+              </div>
+              <div class="blocos">
+                  <i class="icone">Icone 4</i>
+                  <h4>100%</h4>
+                  <p>Clientes Satisfeitos</p>
+              </div>
+                <div class="blocos">
+                  <i class="icone">Icone 5</i>
+                  <h4>100%</h4>
+                  <p>Eco Ponto</p>
+              </div>
+            
+          </div>
       </div>
-    </div>
 
-  </div>
-
-  <div id="faq">
-    <h1>Perguntas frequentes</h1>
-     <details>
+    <div id="faq">
+      <h1>Perguntas frequentes</h1>
+      <details>
         <summary>Título da Caixa</summary>
         <p>Texto 1</p>
-    </details>
-  </div>
+      </details>
+    </div>
 
-   </main>
-  
-  <br>
+  </main>
 
   <footer>
     <div class="footer-content">
-        <div class="footer-section">
-            <h3>Suporte</h3>
-            <ul>
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">Fale Conosco</a></li>
-            </ul>
-        </div>
-        <div class="footer-section">
-            <h3>Redes Sociais</h3>
-            <ul class="social-icons">
-                <li><a href="#"><i class="fa fa-whatsapp" style="font-size:24px"></i></a></li>
-                <li><a href="#"><i class="fa fa-instagram" style="font-size:24px"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter" style="font-size:24px"></i></a></li>
-            </ul>
-        </div>
-        <div class="footer-section">
-            <h3>Intranet</h3>
-            <ul>
-            <li><a href="/ecotech/locais/todos-locais">Acesso funcionário</a></li>
-            <li><a href="/ecotech/ecoponto/perfil">Acesso dono de Ecoponto</a></li><br><br><br><br><br><br>
-            
-            </ul>
-        </div>
+      <div class="footer-section">
+        <h3>Suporte</h3>
+        <ul>
+          <li><a href="#">FAQ</a></li>
+          <li><a href="#">Fale Conosco</a></li>
+        </ul>
+      </div>
+      <div class="footer-section">
+        <h3>Redes Sociais</h3>
+        <ul class="social-icons">
+          <li><a href="#"><i class="fa fa-whatsapp" style="font-size:24px"></i></a></li>
+          <li><a href="#"><i class="fa fa-instagram" style="font-size:24px"></i></a></li>
+          <li><a href="#"><i class="fa fa-twitter" style="font-size:24px"></i></a></li>
+        </ul>
+      </div>
+
+      <div class="footer-section">
+        <h3>Intranet</h3>
+        <ul>
+          <li><a href="/ecotech/locais/todos-locais">Acesso funcionário</a></li>
+          <li><a href="/ecotech/ecoponto/perfil">Acesso dono de Ecoponto</a></li><br><br><br><br><br><br>
+        </ul>
+      </div>
     </div>
-    <hr>
+
     <div class="footer-bottom">
-        <div class="footer-left">
-            <p style="font-size: larger;">Brasil</p>
-        </div>
-        <div class="footer-links">
-            <a href="#">Política de Privacidade</a>
-            <a href="#">Termos de Uso</a>
-        </div>               
+      <div class="footer-left">
+        <p style="font-size: larger;">Brasil</p>
+      </div>
+      <div class="footer-links">
+        <a href="#">Política de Privacidade</a>
+        <a href="#">Termos de Uso</a>
+      </div>   
     </div>
-    </div>
-</footer>
+
+  </footer>
 </body>
 </html>
