--- a/ecotech2/src/main/resources/templates/donoEcoponto/editar.html
+++ b/ecotech2/src/main/resources/templates/donoEcoponto/editar.html
@@ -25,7 +25,7 @@
 		<img src="/img/logo.png" alt="Logo" class="logo">
 		<!-- Menu -->
 		<nav class="nav">
-			<a href="/ecotech/cliente/index">Home</a>
+			<a href="/ecotech/user/index">Home</a>
 			<a href="/ecotech/ecoponto/perfil">Tela Perfil</a>
 
 		</nav>
