--- a/ecotech2/src/main/resources/templates/donoEcoponto/login.html
+++ b/ecotech2/src/main/resources/templates/donoEcoponto/login.html
@@ -16,7 +16,7 @@
         <img src="/img/logo.png" alt="Logo" class="logo">
         <!-- Menu -->
         <nav>
-            <a href="/ecotech/cliente/index">Home</a>
+            <a href="/ecotech/user/index">Home</a>
         </nav>
         <br><br>
     </header>
