--- a/ecotech2/src/main/resources/templates/index.html
+++ b/ecotech2/src/main/resources/templates/index.html
@@ -16,10 +16,9 @@
   <header class="black">
     <img src="/img/logo.png" alt="Logo" class="logo">
     <nav>
-      <a href="recursos.html">Recursos</a>
-      <a href="privacidade.html">Privacidade</a>
-      <a href="centraldeajuda.html">Central de Ajuda</a>
-      <a href="baixar.html">Baixar</a>
+       <a href="#beneficio-conteiner">Benefícios</a>
+      <a href="#faq">FAQ</a>
+      <a href="#nosso-app">Noso App</a>
     </nav>
   </header>
 
@@ -115,9 +114,10 @@
       </div>
 	<br><br><br>
     <div class="faq-container">
+		<span id="faq"></span>
     <h2>Perguntas Frequentes</h2>
     <p>Tudo o que você precisa saber sobre nossa Reciclagem Eletrônica</p>
-    <button class="contact-button">FALE CONOSCO</button>
+  
 
     <details class="faq-item">
         <summary>O que é reciclagem eletrônica? <span class="arrow">v</span></summary>
@@ -173,7 +173,7 @@
       <div class="footer-section">
         <h3>Intranet</h3>
         <ul>
-          <li><a href="/ecotech/locais/todos-locais">Acesso funcionário</a></li>
+          <li><a href="/ecotech/user/login">Acesso funcionário</a></li>
           <li><a href="/ecotech/ecoponto/perfil">Acesso dono de Ecoponto</a></li><br><br><br><br><br><br>
         </ul>
       </div>
