--- a/ecotech2/src/main/resources/templates/donoEcoponto/novolocal.html
+++ b/ecotech2/src/main/resources/templates/donoEcoponto/novolocal.html
@@ -24,8 +24,8 @@
         <img src="/img/logo.png" alt="Logo" class="logo">
         <!-- Menu -->
         <nav class="nav">
-            <a href="/ecotech/cliente/index" >Home</a>
-            <a href="/ecotech/cliente/perfil" >Tela Perfil</a>
+            <a href="/ecotech/user/index" >Home</a>
+            <a href="/ecotech/user/perfil" >Tela Perfil</a>
             <a href="/ecotech/locais/todos-locais" >Centros de coleta</a>
         </nav>
        <br><br> <br>
