--- a/ecotech2/src/main/resources/templates/intranet/perfil/Login.html
+++ b/ecotech2/src/main/resources/templates/intranet/perfil/Login.html
@@ -22,7 +22,7 @@
         <img src="/img/logo.png" alt="Logo" class="logo">
         <!-- Menu -->
         <nav>
-            <a href="/ecotech/cliente/index">Home</a>
+            <a href="/ecotech/user/index">Home</a>
         </nav>
         <br><br>
     </header>
@@ -33,7 +33,7 @@
       
         <div class="login-box" >
             <h2 class="login-title">Insira seu E-mail para se cadastrar ou entrar</h2><br>
-            <form th:action="@{/ecotech/cliente/login}" th:object="${usuario}"  method="post" class="loginForm">
+            <form th:action="@{/ecotech/user/login}" th:object="${usuario}"  method="post" class="loginForm">
                 <h4>Insira seu E-mail</h4>
                 <input type="email" name="email" id="email" placeholder="E-mail" required th:field="*{email}">
                 <br><h4>Insira sua senha</h4>
