--- a/ecotech2/src/main/resources/templates/donoEcoponto/novolocal.html
+++ b/ecotech2/src/main/resources/templates/donoEcoponto/novolocal.html
@@ -156,7 +156,7 @@
 
 
 				<div class="form-group col-md-12" style="text-align:center;">
-					<input type="submit" class="btn btn-primary mb-2" value="Gravar Novo Local" style="background-color: #82AE64;  border:none">
+					<input type="submit" class="btn btn-primary mb-2" value="Gravar Novo Local" style="background-color: rgb(112, 204, 72);;  border:none">
 				</div>
 			</div>
 		</form>
