--- a/ecotech2/src/main/resources/static/style.css
+++ b/ecotech2/src/main/resources/static/style.css
@@ -1,3 +1,5 @@
+
+
 html {
     scroll-behavior: smooth;
 }
@@ -12,7 +14,7 @@ body {
 
 
 .titulo {
-	color: #82ae64;
+	color: rgb(112, 204, 72);
 	text-align: center;
 }
 
@@ -228,7 +230,7 @@ hr {
 }
 
 .nav a:hover {
-	color: #82ae64;
+	color: rgb(112, 204, 72);
 	text-decoration: underline;
 }
 
@@ -248,7 +250,7 @@ nav a {
 }
 
 nav a:hover {
-	color: #82ae64;
+	color: rgb(112, 204, 72);
 	text-decoration: underline;
 }
 
@@ -307,8 +309,8 @@ nav a:hover {
 
 	border: none;
 	font-size: 100%;
-	background-color: #82AE64;
-	color: aliceblue;
+	background-color:rgb(112, 204, 72);
+	color: rgb(240, 255, 243);
 
 	text-decoration: none;
 	margin-bottom: -2%;
@@ -318,18 +320,17 @@ nav a:hover {
 }
 
 #logOut {
-	background-color: rgb(163, 163, 163);
+	background-color: rgb(154, 154, 154);
 }
 
 #logOut:hover {
-	background-color: rgb(163, 163, 163);
-	background-color: rgb(128, 128, 128);
+	background-color: rgb(120, 120, 120);
 }
 
 .profile_box a:hover {
 	font-size: 105%;
 	text-decoration: underline;
-	background-color: rgb(128, 128, 128);
+	background-color: rgb(86, 174, 49);
 }
 
 .profile_infs {
@@ -420,7 +421,7 @@ nav a:hover {
 
 	border: none;
 	font-size: 100%;
-	background-color: #92B560;
+	background-color: rgb(112, 204, 72);
 	color: aliceblue;
 
 	text-decoration: none;
@@ -447,7 +448,7 @@ nav a:hover {
 	text-align: center;
 	border: 1px solid #000000;
 	border-radius: 10px;
-	box-shadow: 0 0 20px rgba(130, 174, 100, 0.5);
+	box-shadow: 0 0 20px rgb(89, 180, 50);
 
 }
 
@@ -515,8 +516,8 @@ nav a:hover {
 }
 
 .loginForm input:focus {
-	border-color: #82AE64;
-	box-shadow: 0 0 5px rgba(130, 174, 100, 0.5);
+	border-color: rgb(112, 204, 72);
+	box-shadow: 0 0 5px rgb(90, 181, 51);
 }
 
 .senha {
@@ -716,7 +717,7 @@ nav a:hover {
 }
 
 .password-input .toggle-password:hover {
-	color: #82AE64;
+	color: rgb(112, 204, 72);
 	border-radius: 5px;
 
 }
@@ -753,7 +754,7 @@ nav a:hover {
 }
 
 .bordasSuaves:hover {
-	border: solid #82AE64
+	border: solid rgb(112, 204, 72);
 }
 
 .faq-container {
@@ -819,14 +820,14 @@ nav a:hover {
 	margin-bottom: 1%;
 	border: none;
 	font-size: 120%;
-	background-color: #92B560;
+	background-color: rgb(112, 204, 72);
 	color: aliceblue;
 	cursor: pointer;
 	transition: background-color 0.3s, color 0.3s;
 }
 
 .buttonColored:hover {
-	background-color: #80837d;
+	background-color: rgb(87, 176, 49);
 }
 
 .regis_infs {
@@ -853,7 +854,7 @@ nav a:hover {
 }
 
 .regis_icon:hover {
-	background-color: #82AE64;
+	background-color: rgb(112, 204, 72);
 	color: aliceblue;
 	padding: 1%;
 	font-size: 110%;
@@ -904,7 +905,7 @@ nav a:hover {
 		margin-right: 70px;
 		border: 1px solid #000000;
 		border-radius: 10px;
-		box-shadow: 0 0 20px rgba(130, 174, 100, 0.5);
+		box-shadow: 0 0 20px rgb(89, 180, 50);
 	}
 
 	.disabled {
@@ -952,8 +953,8 @@ nav a:hover {
 
 		border: none;
 		font-size: 100%;
-		background-color: #92B560;
-		color: aliceblue;
+		background-color:rgb(128, 213, 91);
+		color: rgb(240, 255, 243);
 
 		text-decoration: none;
 		margin: -5%;
@@ -969,5 +970,9 @@ nav a:hover {
 		padding: 20px;
 		border-radius: 8px;
 
+	}
+	
+	.profile_box a :hover {
+		background-color:rgb(88, 184, 48);
 	}
 }
