--- a/ecotech2/src/main/resources/templates/intranet/editar-local.html
+++ b/ecotech2/src/main/resources/templates/intranet/editar-local.html
@@ -212,7 +212,7 @@
 					<a href="/ecotech/ecoponto/perfil" class="btn btn-primary mb-2"
 						style="background-color: rgb(192, 192, 192); border:rgb(192, 192, 192)">Voltar</a>
 					<input type="submit" class="btn btn-primary mb-2" value="Atualizar Local"
-						style="background-color: #82AE64; border:#82AE64">
+						style="background-color: rgb(112, 204, 72); border:rgb(112, 204, 72)">
 
 				</div>
 
