--- a/ecotech2/src/main/resources/templates/intranet/locais.html
+++ b/ecotech2/src/main/resources/templates/intranet/locais.html
@@ -47,7 +47,7 @@
 
 
 				<button type="submit" class="btn btn-primary form-group col-md-1"
-					style="background-color: #82AE64; border:#82AE64;height: 40%;">Filtrar</button>
+					style="background-color: rgb(112, 204, 72); border:rgb(112, 204, 72);height: 40%;">Filtrar</button>
 			</form>
 
 
@@ -60,7 +60,7 @@
 						<option value="0">Locais Inativos</option>
 					</select>
 					<button type="submit" class="btn btn-primary form-group col-md-12"
-						style="background-color: #82AE64; border:#82AE64">Filtrar</button>
+						style="background-color: rgb(112, 204, 72); border:rgb(112, 204, 72)">Filtrar</button>
 				</div>
 
 			</form>
@@ -92,7 +92,7 @@
 							<td th:text="${local.statusPonto ? 'Ativo' : 'Inativo'}"></td>
 							<td>
 								<a th:href="@{/ecotech/locais/editar-local/{id}(id=${local.id})}"
-									class="btn btn-primary" style="background-color: #82AE64; border:#82AE64">
+									class="btn btn-primary" style="background-color: rgb(112, 204, 72); border:rgb(112, 204, 72)">
 									<i class="fas fa-edit ml-2"></i>
 								</a>
 							</td>
